--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <form action="/login" method="POST">
         <input type="text" id="user" name="user" value="gun"/>
         <input type="text" id="password" name="password" value="134"/>
-        <!-- <button type="button" id="login" onclick="show()" value="submit">login</button> -->
-        <button type="button" id="login" value="submit">login</button>
-        <a href="/user">user</a>
+        <input type="submit"  value="login"/>
     </form>
+    <a href="/user">user</a>
 </body>
 </html>
